--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html land="eng">
   <head>
-    <mata charset="UTF-8">
+    <meta charset="UTF-8">
     <title>typescript</title>
     <script src="app.js"></script
   </head>
