show some examples of TS

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>typescript</title>
-    <script src="app.js"></script
+    <script src="solutions.js"></script
   </head>
   <body>
   </body>
